--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
                 Welcome to Wits Digital Arts
             </h1>
             <p>
-                Let us help you develop a diverse skill set and prepare you for your future in the Digital Space
-                <br> - with that Wits Edge.
+                Let us help you develop a diverse skill set and prepare you to conquer the edge for your future in the
+                Digital Space.
             </p>
             <a href="" class="main-btn">Find Out More</a>
         </div>
     </section>
 
-    <!--Courses Section-->
     <section class="courses">
         <h1>
             What We Offer
         </h1>
         <p>
-            At Wits Digital Arts, we offer pioneered collaborations between Wits Electrical and Information Engineering,
+            At Wits Digital Arts, we offer pioneered collaborations between Wits Electrical and Information
+            Engineering,
             and the Wits School of Arts.
         </p>
 
@@ -72,9 +72,12 @@
                 </h3>
                 <p>
                     The BA in Digital Arts is a 4 Year Professional Degree that allows you to tailor your
-                    specialisation, and also gives you a useful, broad skillset. The combination of artistic, technical
-                    and critical skills equips you to be an innovator, practical problem-solver, as well as a critical
+                    specialisation, and also gives you a useful, broad skillset. The combination of artistic,
+                    technical
+                    and critical skills equips you to be an innovator, practical problem-solver, as well as a
+                    critical
                     thinker and artist.
+                </p>
             </div>
             <div class="courses-colm">
                 <h3>
@@ -98,7 +101,52 @@
                 </p>
             </div>
         </div>
+    </section>
 
+    <!--Facilities-->
+
+    <!--Our Students-->
+    <section class="students">
+        <h1>
+            Our Students
+        </h1>
+        <p>
+            Digital Arts produces graduates with a deep understanding of the theories and practice of Technology Arts.
+            Our focus is on producing students that demonstrate adaptability and critical understanding in professional
+            arenas: as independent artists, entrepreneurs, as well as in the more formalized workforce.
+        </p>
+
+        <div class="row">
+            <div class="students-colm">
+                <img src="Images/emmanuel.jpg">
+                <h3>
+                    Our Alumni: Emmanuel Sarfo-Boansi
+                </h3>
+                <p>
+                    MA in Digital Animation by coursework, 2013
+                    Kwabena works professionally as an animation artist in Cape Town, associated with
+                    Triggerfish as they continue to embark on more high profile projects, as well other studios in
+                    the city. He constantly strives to grow his skills and put them to the test on animated content
+                    of the highest caliber.
+                </p>
+                <br>
+                <a href="" class="main-btn">Read More</a>
+            </div>
+            <div class="students-colm">
+                <img src="Images/pippa.jpg">
+                <h3>
+                    Our Alumni: Pippa Tshabalala
+                </h3>
+                <p>
+                    Masters in Fine Arts (Digital Animation)
+                    She has worked full-time in the television industry since 2010, moving from producing content
+                    for The Verge and a variety of other shows. She has also written for a variety of publications
+                    and websites such as NAG Magazine, Techsmart and Gearburn as well as running her own online
+                    magazine, Spliced, of which she was the Editor between 2013-2015.
+                </p>
+                <a href="" class="main-btn">Read More</a>
+            </div>
+        </div>
     </section>
 
     <!-- Menu Toggle - Make seperate JS -->
