--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT US</a></li>
                     <li><a href="">COURSES</a></li>
-                    <li><a href="">OUR STUDENTS</a></li>
+                    <li><a href="">OUR ALUMNI</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
@@ -51,11 +51,11 @@
                 Let us help you develop a diverse skill set and prepare you to conquer the edge for your future in the
                 Digital Space.
             </p>
-            <a href="" class="main-btn">Find Out More</a>
+            <a href="index.html#courses" class="main-btn">Find Out More</a>
         </div>
     </section>
 
-    <section class="courses">
+    <section class="courses" id="courses">
         <h1>
             What We Offer
         </h1>
@@ -106,7 +106,7 @@
     <!--Facilities-->
 
     <!--Our Students-->
-    <section class="students">
+    <!-- <section class="students">
         <h1>
             Our Students
         </h1>
@@ -147,7 +147,52 @@
                 <a href="" class="main-btn">Read More</a>
             </div>
         </div>
+    </section>-->
+
+    <!--Contact Us-->
+    <section class="contact">
+        <h1>
+            Join us at the Wits School of Arts
+            <br>
+            Work with what you love
+        </h1>
+        <a href="" class="main-btn">Contact Us</a>
+
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-row">
+                <div class="footer-colm">
+                    <h4>Wits Digital Arts</h4>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Courses</a></li>
+                        <li><a href="">Our Alumni</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer-colm">
+                    <h4>Wits University</h4>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Study at Wits</a></li>
+                        <li><a href="">News & Events</a></li>
+                    </ul>
+                </div>
+                <div class="footer-colm">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href=""><i class="fa fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-instagram"></i></a>
+                        <a href=""><i class="fa fa-facebook"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Menu Toggle - Make seperate JS -->
     <script>
