--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="menuHide()"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="">ABOUT US</a></li>
                     <li><a href="">COURSES</a></li>
                     <li><a href="">OUR ALUMNI</a></li>
@@ -161,42 +161,22 @@
     </section>
 
     <footer class="footer">
-        <div class="container">
-            <div class="footer-row">
-                <div class="footer-colm">
-                    <h4>Wits Digital Arts</h4>
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About Us</a></li>
-                        <li><a href="">Courses</a></li>
-                        <li><a href="">Our Alumni</a></li>
-                        <li><a href="">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="footer-colm">
-                    <h4>Wits University</h4>
-                    <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Study at Wits</a></li>
-                        <li><a href="">News & Events</a></li>
-                    </ul>
-                </div>
-                <div class="footer-colm">
-                    <h4>Follow Us</h4>
-                    <div class="social-links">
-                        <a href=""><i class="fa fa-twitter"></i></a>
-                        <a href=""><i class="fa fa-instagram"></i></a>
-                        <a href=""><i class="fa fa-facebook"></i></a>
-                    </div>
-                </div>
-            </div>
+        <h4>
+            Social Media
+        </h4>
+        <p>
+            Follow us on our Social Media and stay informed about the latest at the Digital Arts Department
+        </p>
+        <div class="social-icons">
+            <i class="fa fa-facebook"><a href="https://www.facebook.com/Wits.Digital.Arts"></a></i>
+            <i class="fa fa-twitter"><a href="https://twitter.com/WitsDigitalArt"></a></i>
+            <i class="fa fa-instagram"><a href="https://instagram.com/witsdigitalarts?utm_medium=copy_link"></a></i>
+            <i class="fa fa-gamepad"><a href="https://wits-digital-arts.itch.io/"></a></i>
         </div>
     </footer>
 
     <!-- Menu Toggle - Make seperate JS -->
     <script>
-
         var navLinks = document.getElementById("navLinks");
 
         function menuShow() {
@@ -206,7 +186,6 @@
         function menuHide() {
             navLinks.style.right = "-200px";
         }
-
     </script>
 
 </body>
