--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <i class="fa fa-times" onclick="menuHide()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="">ABOUT US</a></li>
-                    <li><a href="">COURSES</a></li>
-                    <li><a href="">OUR ALUMNI</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="courses.html">COURSES</a></li>
+                    <li><a href="alumni.html">OUR ALUMNI</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
@@ -55,6 +55,7 @@
         </div>
     </section>
 
+    <!--Courses-->
     <section class="courses" id="courses">
         <h1>
             What We Offer
@@ -66,40 +67,52 @@
         </p>
 
         <div class="row">
+
             <div class="courses-colm">
-                <h3>
-                    BA Digital Arts
-                </h3>
-                <p>
-                    The BA in Digital Arts is a 4 Year Professional Degree that allows you to tailor your
-                    specialisation, and also gives you a useful, broad skillset. The combination of artistic,
-                    technical
-                    and critical skills equips you to be an innovator, practical problem-solver, as well as a
-                    critical
-                    thinker and artist.
-                </p>
+                <a href="courses.html#ba-degree">
+                    <h3>
+                        BA Digital Arts
+                    </h3>
+                    <p>
+                        The BA in Digital Arts is a 4 Year Professional Degree that allows you to tailor your
+                        specialisation, and also gives you a useful, broad skillset. The combination of artistic,
+                        technical
+                        and critical skills equips you to be an innovator, practical problem-solver, as well as a
+                        critical
+                        thinker and artist.
+                    </p>
+                </a>
             </div>
+
+
             <div class="courses-colm">
-                <h3>
-                    BEngSc Digital Arts
-                </h3>
-                <p>
-                    The BEngSc in Digital Arts is a combination of information engineering and
-                    creative production gives you a broad range of critical and technical skills. This equips you to
-                    enter the technology sector with an unique perspective: blending software development, systems
-                    thinking, and creative application.
-                </p>
+                <a href="courses.html#beng-degree">
+                    <h3>
+                        BEngSc Digital Arts
+                    </h3>
+                    <p>
+                        The BEngSc in Digital Arts is a combination of information engineering and
+                        creative production gives you a broad range of critical and technical skills. This equips you to
+                        enter the technology sector with an unique perspective: blending software development, systems
+                        thinking, and creative application.
+                    </p>
+                </a>
             </div>
+
+
             <div class="courses-colm">
-                <h3>
-                    Post-Graduate
-                </h3>
-                <p>
-                    <br>
-                    Wits Digital Arts has a fantastic range of postgraduate study opportunities, starting with our
-                    Honours Degree and continuing into Master’s Degrees and even PhD offerings.
-                </p>
+                <a href="courses.html#post-degree">
+                    <h3>
+                        Post-Graduate
+                    </h3>
+                    <p>
+                        <br>
+                        Wits Digital Arts has a fantastic range of postgraduate study opportunities, starting with our
+                        Honours Degree and continuing into Master’s Degrees and even PhD offerings.
+                    </p>
+                </a>
             </div>
+
         </div>
     </section>
 
