--- a/alumni.html
+++ b/alumni.html
@@ -36,7 +36,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
-                    <li><a href="alumni.html">OUR ALUMNI</a></li>
+                    <li><a href="">OUR ALUMNI</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
@@ -50,7 +50,76 @@
     </section>
 
     <!--Alumni Content-->
+    <section class="alumni-content">
+        <div class="row">
+            <div class="left-blog">
+                <img src="Images/joshua-hoehne-iggWDxHTAUQ-unsplash.jpg">
+                <h2>
+                    Our Alumni
+                </h2>
+                <p>
+                    Here at Wits Digital Arts, our students are our priority. Our Alumni are the result of our holistic
+                    outlook on education, preparation and skill-development.
+                    They have joined us at different stages, from different paths of life, and with different
+                    goals, passions and mindsets. Here, we honor and celebrate a few of them and their achievements in
+                    their respective industries - and showcase to you, just what diverse paths you can achieve with the
+                    help of Wits Digital Arts, as you pursue your passions and create your goals.
+                </p>
+            </div>
 
+            <div class="right-blog">
+                <section class="students">
+                    <h1>
+                        Our Students
+                    </h1>
+                    <p>
+                        Digital Arts produces graduates with a deep understanding of the theories and practice of
+                        Technology Arts.
+                        Our focus is on producing students that demonstrate adaptability and critical understanding in
+                        professional
+                        arenas: as independent artists, entrepreneurs, as well as in the more formalized workforce.
+                    </p>
+
+                    <div class="student-row">
+                        <div class="students-colm">
+                            <img src="Images/emmanuel.jpg">
+                            <h3>
+                                Our Alumni: Emmanuel Sarfo-Boansi
+                            </h3>
+                            <p>
+                                MA in Digital Animation by coursework, 2013
+                                Kwabena works professionally as an animation artist in Cape Town, associated with
+                                Triggerfish as they continue to embark on more high profile projects, as well other
+                                studios in
+                                the city. He constantly strives to grow his skills and put them to the test on animated
+                                content
+                                of the highest caliber.
+                            </p>
+                            <br>
+                            <a href="" class="main-btn">Read More</a>
+                        </div>
+                        <div class="students-colm">
+                            <img src="Images/pippa.jpg">
+                            <h3>
+                                Our Alumni: Pippa Tshabalala
+                            </h3>
+                            <p>
+                                Masters in Fine Arts (Digital Animation)
+                                She has worked full-time in the television industry since 2010, moving from producing
+                                content
+                                for The Verge and a variety of other shows. She has also written for a variety of
+                                publications
+                                and websites such as NAG Magazine, Techsmart and Gearburn as well as running her own
+                                online
+                                magazine, Spliced, of which she was the Editor between 2013-2015.
+                            </p>
+                            <a href="" class="main-btn">Read More</a>
+                        </div>
+                    </div>
+                </section>-->
+            </div>
+        </div>
+    </section>
 
     <!--Footer-->
     <footer class="footer">
