--- a/courses.html
+++ b/courses.html
@@ -63,46 +63,38 @@
 
             <div class="courses-colm">
                 <a href="courses.html#ba-degree">
-                    <h3>
-                        BA Digital Arts
-                    </h3>
-                    <p>
-                        The BA in Digital Arts is a 4 Year Professional Degree that allows you to tailor your
-                        specialisation, and also gives you a useful, broad skillset. The combination of artistic,
-                        technical
-                        and critical skills equips you to be an innovator, practical problem-solver, as well as a
-                        critical
-                        thinker and artist.
-                    </p>
+                    <img src="/Images/priscilla-du-preez-XkKCui44iM0-unsplash - Copy.jpg" />
+                    <div class="layer">
+                        <h3>
+                            BA Digital Arts
+                        </h3>
+                    </div>
                 </a>
             </div>
 
 
             <div class="courses-colm">
                 <a href="courses.html#beng-degree">
-                    <h3>
-                        BEngSc Digital Arts
-                    </h3>
-                    <p>
-                        The BEngSc in Digital Arts is a combination of information engineering and
-                        creative production gives you a broad range of critical and technical skills. This equips you to
-                        enter the technology sector with an unique perspective: blending software development, systems
-                        thinking, and creative application.
-                    </p>
+                    <img src="/Images/linkedin-sales-solutions-EI50ZDA-l8Y-unsplash - Copy.jpg">
+                    <div class="layer">
+                        <h3>
+                            BEngSc Digital Arts
+                        </h3>
+                    </div>
+
                 </a>
             </div>
 
 
             <div class="courses-colm">
                 <a href="courses.html#post-degree">
-                    <h3>
-                        Post-Graduate
-                    </h3>
-                    <p>
-                        <br>
-                        Wits Digital Arts has a fantastic range of postgraduate study opportunities, starting with our
-                        Honours Degree and continuing into Master’s Degrees and even PhD offerings.
-                    </p>
+                    <img src="/Images/lagos-techie-IgUR1iX0mqM-unsplash - Copy.jpg">
+                    <div class="layer">
+                        <h3>
+                            Post-Graduate
+                        </h3>
+
+                    </div>
                 </a>
             </div>
 
