--- a/courses.html
+++ b/courses.html
@@ -93,7 +93,6 @@
                         <h3>
                             Post-Graduate
                         </h3>
-
                     </div>
                 </a>
             </div>
@@ -110,45 +109,180 @@
             <p>
                 The BA in Digital Arts is a 4 Year Professional Degree that allows you to tailor your specialisation,
                 and also gives you a useful, broad skillset. It is an Honors-equivalent that combines the artistic,
-                technical and critical skills that
-                equip you to be an innovator, practical problem-solver, as well as a critical thinker and artist.
+                technical and critical skills that equip you to be an innovator, practical problem-solver, as well as a
+                critical thinker and artist.
                 <br>
                 <br>
                 Your first year, and what is know as the Anologue year, includes core academic and professional concepts
                 such as:
-                <br>
-                Game Design
-                <br>
-                Storytelling & Drawing
-                <br>
-                Critical Arts Analysis
-                <br>
-                <br>
-                And from second year, when we move into digital development, we also address:
-                <br>
-                Programming
-                <br>
-                3D Modeling and Animation
-                <br>
-                <br>
-                Once you move into the 3rd and 4th year levels of study, you continue with critical theory, and choose
-                your
-                specialisations from a range of professional majors, namely:
-                <br>
-                Game Design
-                <br>
-                Animation
-                <br>
-                Writing
-                <br>
-                Interactive Media
+            <ul>
+                <li>
+                    Game Design
+                </li>
+                <li>
+                    Storytelling & Drawing
+                </li>
+                <li>
+                    Critical Art Analysis
+                </li>
+            </ul>
+            <br>
+            <br>
+            And from second year, when we move into digital development, we also address:
+            <ul>
+                <li>
+                    Programming
+                </li>
+                <li>
+                    3D Modelling & Animation
+                </li>
+            </ul>
+            <br>
+            <br>
+            Once you move into the 3rd and 4th year levels of study, you continue with critical theory, and choose your
+            specialisations from a range of professional majors, namely:
+            <ul>
+                <li>
+                    Game Design
+                </li>
+                <li>
+                    Animation
+                </li>
+                <li>
+                    Writing
+                </li>
+                <li>
+                    Interactive Media
+                </li>
                 <br>
                 <br>
                 In the senior years, you will be able to experiment with growing technologies like VR and AR, and
-                produce
-                large-scale creative projects. We will be sending you off with a broad portolfio with which to enter
-                industry.
-            </p>
+                produce large-scale creative projects. We will be sending you off with a broad portolfio with which to
+                enter industry.
+                <br>
+                <br>
+                <b><u>Application Requirements:</u></b>
+                <ul>
+                    <li>
+                        Minimum APS of 34
+                    </li>
+                    <li>
+                        Minimum of 60% for English as a Home Language OR English as a First Additional Language
+                    </li>
+                    <li>
+                        While Mathematics is not a requisite, it will be considered as part of your application. The
+                        Digital Arts degree involves coding for all students and Mathematics can be an valuable part of
+                        the applicant’s application.
+                    </li>
+                    <li>
+                    </li>
+                    Additional Requirements:
+                    <ul>
+                        <li>
+                            Questionnaire:
+                            <ul>
+                                <li>
+                                    The questionnaire will ask a series of questions. Some of these are about you as an
+                                    applicant and some of them pertain to the kinds of work we do at Wits Digital Arts.
+                                    <br>
+                                    You will be assessed based on your ability to:
+                                    <ul>
+                                        <li>
+                                            Problem-solve
+                                        </li>
+                                        <li>
+                                            Engage critically
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    You <b><u>must</u></b> submit the following with your questionnaire:
+                                    <br>
+                                    <ul>
+                                        <li>
+                                            A <b>1-page CV</>, detailing your personal information - partucularly your:
+                                                <ul>
+                                                    <li>Full Name</li>
+                                                    <li>Address</li>
+                                                    <li>Telephone or cellphone contact information</li>
+                                                    <li>Email contact information</li>
+                                                    <li>Name of the last school you attended</li>
+                                                    <li>Year of matriculation (or expected matriculation)</li>
+
+                                                </ul>
+                                        </li>
+                                        <li>
+                                            <b>Copy of your ID<b>
+                                        </li>
+                                        <li>
+                                            A transcript of your most recent marks. This being a <b><u>Certified
+                                                    copy</b></u> of your:
+                                            <ul>
+                                                <li>Final Grade 11 marks</li>
+                                                <li>Matric Certificate</li>
+                                                <li>Academic transcript</li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <b>A critical essay (1-2 pages)</b>
+                                            <br>
+                                            <br>
+                                            <b><u>Essay Question</b></u>
+                                            <br>
+                                            In a short essay (1-2 pages) discuss a game, animation or interactive media
+                                            (digital or analogue) that you have recently engaged with. Your essay should
+                                            not be a description. It should critically engage with how the artwork
+                                            works, the themes and the effect that this has on the user/player/audience.
+                                            You should be able to describe what you liked or did not like. You should
+                                            identify one to two aspects of the artwork that you found most or least
+                                            effective and discuss why that is
+                                        </li>
+                                        <li>
+                                            <b>A portfolio of work</b>
+                                            <br>
+                                            This portfolio can be on any creative work that you have completed. You are
+                                            free to submit drawings, animations, games, photography, creative writing or
+                                            any work that you have done. This is a moment for you to show off your
+                                            abilities and talents. Feel free to submit whatever you feel highlights you
+                                            best.
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Questionnaires will be first issued in May 2021. We will continue to issue to new
+                                    applicants every two weeks until November. The final deadline for the questionnaire
+                                    is 19th November 2021.
+                                    <br>
+                                    <br>
+                                    If you have not received a questionnaire 3 weeks after your application, please
+                                    contact Liezel Borman (Liezel.Borman@wits.ac.za) to request that it is resent to
+                                    you.
+                                </li>
+                            </ul>
+                        <li>
+                        </li>
+                        <li>
+                            Wait-listing
+                            <br>
+                            <br>
+                            Applicants with an entry requirement of at least 30-33 APS points are wait-listed, subject
+                            to place availability.
+                        </li>
+                        <li>
+                            Additional Selection Criteria
+                            <br>
+                            <br>
+                            You will be required to attend a digital arts workshop.
+                            <br>
+                            Due to limited space, meeting the minimum requirements does not guarantee a place. Final
+                            selection is made subject to place availability, academic results, and other entry
+                            requirements, where applicable.
+                        </li>
+                    </ul>
+                    </p>
+                    <a href="https://www.wits.ac.za/undergraduate/apply-to-wits/" class="main-btn">Apply Now</a>
+                    <br>
+                    <br>
         </div>
         <div class="beng-degree" id="beng-degree">
             <h2>
@@ -194,7 +328,7 @@
                 Advanced Game Design (the latter requires prior experience in Game Design).
                 <br>
                 <br>
-                Application Requirements:
+                <b><u>Application Requirements:</u></b>
                 <br>
                 Honours: A Bachelor’s Degree within a related field (e.g. Software Development, Graphic Design,
                 Architecture) with an overall aggregate of 65% for practical subjects, as well as 65% theory.
