--- a/alumni.html
+++ b/alumni.html
@@ -36,7 +36,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="courses.html">COURSES</a></li>
-                    <li><a href="">OUR ALUMNI</a></li>
+                    <li><a href="alumni.html">NEWS</a></li>
                     <li><a href="">CONTACT US</a></li>
                 </ul>
             </div>
@@ -44,12 +44,12 @@
         </nav>
 
         <h1>
-            Our Alumni
+            News
         </h1>
 
     </section>
 
-    <!--Alumni Content-->
+    <!--Alumni Content
     <section class="alumni-content">
         <div class="row">
             <div class="left-blog">
@@ -117,9 +117,9 @@
                         </div>
                     </div>
                 </section>-->
-            </div>
-        </div>
-    </section>
+    </div>
+    </div>
+    </section>-->
 
     <!--Footer-->
     <footer class="footer">
